// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/components/kanban/kanbanCard > return kanbanCard and click on copy link menu  1`] = `
<div>
  <div
    class="KanbanCard"
    style="opacity: 1;"
  >
    
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              aria-label="Delete"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Delete
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Duplicate"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-content-copy content-copy"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Duplicate
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Move to a board…"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <svg
                    class="BoardIcon Icon"
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      opacity="0.8"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Move to a board…
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Copy link"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-link-variant LinkIcon"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Copy link
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
    
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard > return kanbanCard and click on delete menu  1`] = `
<div>
  <div
    class="KanbanCard"
    style="opacity: 1;"
  >
    
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              aria-label="Delete"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Delete
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Duplicate"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-content-copy content-copy"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Duplicate
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Move to a board…"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <svg
                    class="BoardIcon Icon"
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      opacity="0.8"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Move to a board…
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Copy link"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-link-variant LinkIcon"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Copy link
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
    
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard > return kanbanCard and click on duplicate menu  1`] = `
<div>
  <div
    class="KanbanCard"
    style="opacity: 1;"
  >
    
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div
              aria-label="Delete"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Delete
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Duplicate"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-content-copy content-copy"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Duplicate
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Move to a board…"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <svg
                    class="BoardIcon Icon"
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      opacity="0.8"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Move to a board…
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
            <div
              aria-label="Copy link"
              class="MenuOption TextOption menu-option"
              role="button"
              tabindex="-1"
            >
              <div
                class="d-flex"
              >
                <div
                  class="menu-option__icon"
                >
                  <i
                    class="CompassIcon icon-link-variant LinkIcon"
                  />
                </div>
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Copy link
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
    
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard > should match snapshot 1`] = `
<div>
  <div
    class="KanbanCard"
    style="opacity: 1;"
  >
    
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
    
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard > should match snapshot with readonly 1`] = `
<div>
  <div
    class="KanbanCard"
    style="opacity: 1;"
  >
    
    
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
    
  </div>
</div>
`;
